[gd_scene format=3 uid="uid://dolswgag5s7d7"]

[ext_resource type="Script" uid="uid://dc5ffxdlyp28w" path="res://IntroductionScreen/introduction_screen.gd" id="1_j43pe"]
[ext_resource type="Texture2D" uid="uid://djyqk8cw3xkm6" path="res://IntroductionScreen/Assets/instruction_background.png" id="2_qm54g"]
[ext_resource type="Texture2D" uid="uid://ck3nosnmp3sq5" path="res://IntroductionScreen/Assets/mouse_lined_icon.png" id="3_8ocp6"]
[ext_resource type="Script" uid="uid://cv1tqomq6d35i" path="res://Effect Components/node2D_effect.gd" id="3_qm54g"]
[ext_resource type="Texture2D" uid="uid://c2ue5vkjoa5s" path="res://IntroductionScreen/Assets/drag.png" id="4_6ekf3"]

[sub_resource type="Animation" id="Animation_qm54g"]
resource_name = "rotate_loop"
length = 0.5
loop_mode = 2
step = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drag/TurnRight")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"do_tween"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Drag/TurnLeft")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"do_tween"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ocp6"]
_data = {
&"rotate_loop": SubResource("Animation_qm54g")
}

[node name="IntroductionScreen" type="Control" unique_id=102741142]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j43pe")

[node name="Background" type="Sprite2D" parent="." unique_id=2121567155]
visible = false
z_index = 1
scale = Vector2(5, 5)
texture = ExtResource("2_qm54g")

[node name="DragIn" type="Node" parent="Background" unique_id=707411918 node_paths=PackedStringArray("affected_node")]
script = ExtResource("3_qm54g")
affected_node = NodePath("..")
position_amount = Vector2(0, 0)
trans_type = 11
ease_type = 1
tween_duration = 0.7
metadata/_custom_type_script = "uid://cv1tqomq6d35i"

[node name="DragOut" type="Node" parent="Background" unique_id=1537421870 node_paths=PackedStringArray("affected_node")]
script = ExtResource("3_qm54g")
affected_node = NodePath("..")
position_amount = Vector2(1000, 0)
trans_type = 11
tween_duration = 0.7
metadata/_custom_type_script = "uid://cv1tqomq6d35i"

[node name="MouseIcon" type="Sprite2D" parent="." unique_id=1323165886]
visible = false
z_index = 2
scale = Vector2(5, 5)
texture = ExtResource("3_8ocp6")

[node name="DragIn" type="Node" parent="MouseIcon" unique_id=612067135 node_paths=PackedStringArray("affected_node")]
script = ExtResource("3_qm54g")
affected_node = NodePath("..")
position_amount = Vector2(0, 0)
trans_type = 11
ease_type = 1
tween_duration = 0.7
metadata/_custom_type_script = "uid://cv1tqomq6d35i"

[node name="DragOut" type="Node" parent="MouseIcon" unique_id=1486273114 node_paths=PackedStringArray("affected_node")]
script = ExtResource("3_qm54g")
affected_node = NodePath("..")
position_amount = Vector2(1000, 0)
trans_type = 11
tween_duration = 0.7
metadata/_custom_type_script = "uid://cv1tqomq6d35i"

[node name="Drag" type="Sprite2D" parent="." unique_id=1660235273]
visible = false
z_index = 2
position = Vector2(0, 200)
scale = Vector2(5, 5)
texture = ExtResource("4_6ekf3")

[node name="DragIn" type="Node" parent="Drag" unique_id=1992399144 node_paths=PackedStringArray("affected_node")]
script = ExtResource("3_qm54g")
affected_node = NodePath("..")
position_amount = Vector2(0, 200)
trans_type = 11
ease_type = 1
tween_duration = 0.7
metadata/_custom_type_script = "uid://cv1tqomq6d35i"

[node name="DragOut" type="Node" parent="Drag" unique_id=1034442159 node_paths=PackedStringArray("affected_node")]
script = ExtResource("3_qm54g")
affected_node = NodePath("..")
position_amount = Vector2(1000, 200)
trans_type = 11
tween_duration = 0.7
metadata/_custom_type_script = "uid://cv1tqomq6d35i"

[node name="TurnRight" type="Node" parent="Drag" unique_id=1183907972 node_paths=PackedStringArray("affected_node")]
script = ExtResource("3_qm54g")
affected_node = NodePath("..")
rotation_amount = 15.0
trans_type = 1
ease_type = 2
tween_duration = 0.5
metadata/_custom_type_script = "uid://cv1tqomq6d35i"

[node name="TurnLeft" type="Node" parent="Drag" unique_id=1702505007 node_paths=PackedStringArray("affected_node")]
script = ExtResource("3_qm54g")
affected_node = NodePath("..")
rotation_amount = -15.0
trans_type = 1
ease_type = 2
tween_duration = 0.5
metadata/_custom_type_script = "uid://cv1tqomq6d35i"

[node name="DragPlayer" type="AnimationPlayer" parent="." unique_id=1232817653]
libraries/ = SubResource("AnimationLibrary_8ocp6")
